added sound effects

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             </div>
         </div>
     </div>
-        <div class="settings-panel"></div>
+        <div class="settings-panel" id="settings-panel"></div>
 </div>
    
-
+<script src="effects.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
